--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.entities": "1.0.16",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.inputsystem": "1.6.3",
     "com.unity.render-pipelines.high-definition": "14.0.8",
     "com.unity.terrain-tools": "5.0.4",
     "com.unity.textmeshpro": "3.0.6",
